--- a/pages/live-detection.html
+++ b/pages/live-detection.html
@@ -439,18 +439,6 @@
                     <div class="sidebar-card">
                         <h3>
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
-                                <polyline points="22 4 12 14.01 9 11.01" />
-                            </svg>
-                            System Status
-                        </h3>
-                        <div class="api-status loading" id="statusIndicator">
-                            <span>●</span> Loading models...
-                        </div>
-                    </div>
-                    <div class="sidebar-card">
-                        <h3>
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <circle cx="12" cy="12" r="10" />
                                 <circle cx="12" cy="12" r="3" />
                             </svg>
@@ -634,7 +622,6 @@
             async function initializeModels() {
                 const loadingOverlay = $('loadingOverlay');
                 const loadingText = $('loadingText');
-                const statusIndicator = $('statusIndicator');
                 const startBtn = $('startBtn');
 
                 loadingOverlay.style.display = 'flex';
@@ -647,8 +634,6 @@
 
                     if (success) {
                         modelsLoaded = true;
-                        statusIndicator.className = 'api-status connected';
-                        statusIndicator.innerHTML = '<span>●</span> Models loaded';
                         startBtn.disabled = false;
 
                         // Initialize FSM
@@ -657,8 +642,8 @@
                         throw new Error('Failed to load models');
                     }
                 } catch (error) {
-                    statusIndicator.className = 'api-status error';
-                    statusIndicator.innerHTML = '<span>●</span> Error loading models';
+                    loadingText.textContent = 'Error loading models';
+                    loadingText.style.color = '#ff4444';
                 } finally {
                     loadingOverlay.style.display = 'none';
                 }
