--- a/pages/ghost-mode.html
+++ b/pages/ghost-mode.html
@@ -251,6 +251,23 @@
                     <div id="match-feedback"
                         style="position: absolute; top: 20px; right: 20px; background: rgba(40, 200, 64, 0.9); color: white; padding: 5px 15px; border-radius: 20px; opacity: 0; transition: opacity 0.3s; font-weight: bold; pointer-events: none;">
                         Match!</div>
+
+                    <!-- Loading Overlay -->
+                    <div id="loading-overlay"
+                        style="position: absolute; inset: 0; background: rgba(0, 0, 0, 0.85); display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 100;">
+                        <div
+                            style="width: 48px; height: 48px; border: 4px solid #444; border-top-color: #D4A84B; border-radius: 50%; animation: spin 1s linear infinite;">
+                        </div>
+                        <div id="loading-text" style="margin-top: 16px; color: #D4A84B; font-size: 1rem;">Loading AI...
+                        </div>
+                    </div>
+                    <style>
+                        @keyframes spin {
+                            to {
+                                transform: rotate(360deg);
+                            }
+                        }
+                    </style>
                 </div>
 
                 <!-- Right: Controls Sidebar -->
@@ -363,13 +380,26 @@
 
             // Init model
             async function initModel() {
+                const loadingOverlay = document.getElementById('loading-overlay');
+                const loadingText = document.getElementById('loading-text');
+
                 try {
+                    loadingText.textContent = 'Loading AI models...';
                     ort.env.wasm.numThreads = 1;
                     await window.MudraInference.initialize();
                     modelLoaded = true;
+
+                    loadingText.textContent = 'Starting camera...';
                     initCamera();
+
+                    // Hide loading after camera starts
+                    setTimeout(() => {
+                        loadingOverlay.style.display = 'none';
+                    }, 500);
                 } catch (e) {
                     console.error(e);
+                    loadingText.textContent = 'Error loading models';
+                    loadingText.style.color = '#ff4444';
                 }
             }
 
