--- a/pages/live-detection.html
+++ b/pages/live-detection.html
@@ -365,6 +365,12 @@
 <body>
     <nav class="navbar scrolled">
         <div class="container">
+            <a href="#" onclick="history.back(); return false;" class="back-link"
+                style="margin-right: 15px; display: flex; align-items: center; color: white;">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M19 12H5M12 19l-7-7 7-7" />
+                </svg>
+            </a>
             <a href="../index.html" class="logo">
                 <div class="logo-icon">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
